# learn-rag-system

./: README.md  main.py  pyproject.toml
notebook/: chunking.ipynb
